feat(app): add user balance and republish option

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -19,4 +19,7 @@
     <string name="login_getVerification">获取</string>
     <string name="login_successGetVerification">获取成功</string>
     <string name="hello_blank_fragment">空Fragment</string>
+
+    <!-- MainActivity -->
+    <string name="format_user_balance">账户余额：%.2f元</string>
 </resources>
