--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
     <!--LoginActivity-->
     <string name="login_mobile">Mobile</string>
-    <string name="login_verification">Verification Code</string>
+    <string name="login_verification">V Code</string>
     <string name="login">Login</string>
     <string name="login_wrongMobile">Please re-enter your phone number</string>
     <string name="login_emptyVerification">Please enter the verification code</string>
