--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="left_second">( %ds )</string>
     <string name="lock_prefix">CrAM</string>
 
-    <string name="device_connected">Connection succeed</string>
+    <string name="device_connected">Connected</string>
     <string name="device_connecting">Connecting</string>
     <string name="device_disconnected">Disconnected</string>
 
@@ -25,5 +25,19 @@
 
     <!-- PublishParkingActivity -->
     <string name="republish_format">republish %s</string>
+
+    <!-- Avatar -->
+    <string name="avatar_photo">Take Photo</string>
+    <string name="avatar_gallery">Gallery</string>
+
+    <!-- Common -->
+    <string name="cancel">Cancel</string>
+    <string name="confirm">Confirm</string>
+
+    <!-- UserLockFragment -->
+    <string name="modify_password">Modify Password</string>
+    <string name="old_password">Old Password</string>
+    <string name="new_password">New Password</string>
+    <string name="confirm_password">Please Confirm</string>
 
 </resources>
