--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -12,11 +12,11 @@
     <!--LoginActivity-->
     <string name="login_mobile">手机号</string>
     <string name="login_verification">验证码</string>
-    <string name="login">登陆</string>
+    <string name="login">登录</string>
     <string name="login_wrongMobile">手机号码不符合要求，请重新输入</string>
     <string name="login_emptyVerification">请输入验证码</string>
     <string name="login_wrongVerification">请重新输入验证码</string>
-    <string name="login_getVerification">获取</string>
+    <string name="login_getVerification">获取验证码</string>
     <string name="login_successGetVerification">获取成功</string>
     <string name="hello_blank_fragment">空Fragment</string>
 
