fix(app): update encrypted algo

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -8,6 +8,7 @@
     <string name="device_connected">已连接</string>
     <string name="device_connecting">连接中</string>
     <string name="device_disconnected">断开连接</string>
+    <string name="device_connect">连接</string>
 
     <!--LoginActivity-->
     <string name="login_mobile">手机号</string>
