--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -41,4 +41,6 @@
     <string name="new_password">新密码</string>
     <string name="confirm_password">请确认</string>
 
+    <string name="order_owner_orderId">订单号：%d</string>
+
 </resources>
