feat(parkfragment&mainActivity): add popupwindow when marker clicked and add applying for lock function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="confirm_password">Please Confirm</string>
 
     <string name="order_owner_orderId">OrderId: %d</string>
+    <string name="title_activity_join_owner">JoinOwnerActivity</string>
 
 </resources>
